# iot-embedded-challenges

./: CMakeLists.txt  README.md  stm32.cmake  stm32_flash.ld
libopencm3/include/libopencm3/efm32/ezr32wg/: nvic.h
libopencm3/include/libopencm3/efm32/g/: nvic.h
libopencm3/include/libopencm3/efm32/gg/: nvic.h
libopencm3/include/libopencm3/efm32/hg/: nvic.h
libopencm3/include/libopencm3/efm32/lg/: nvic.h
libopencm3/include/libopencm3/efm32/tg/: nvic.h
libopencm3/include/libopencm3/efm32/wg/: nvic.h
libopencm3/include/libopencm3/gd32/f1x0/: nvic.h
libopencm3/include/libopencm3/lm3s/: nvic.h
libopencm3/include/libopencm3/lpc13xx/: nvic.h
libopencm3/include/libopencm3/lpc17xx/: nvic.h
libopencm3/include/libopencm3/lpc43xx/m0/: nvic.h
libopencm3/include/libopencm3/lpc43xx/m4/: nvic.h
libopencm3/include/libopencm3/msp432/e4/: nvic.h
libopencm3/include/libopencm3/pac55xx/: nvic.h
libopencm3/include/libopencm3/sam/3a/: nvic.h
libopencm3/include/libopencm3/sam/3n/: nvic.h
libopencm3/include/libopencm3/sam/3s/: nvic.h
libopencm3/include/libopencm3/sam/3u/: nvic.h
libopencm3/include/libopencm3/sam/3x/: nvic.h
libopencm3/include/libopencm3/sam/4l/: nvic.h
libopencm3/include/libopencm3/sam/d/: nvic.h
libopencm3/include/libopencm3/stm32/f0/: nvic.h
libopencm3/include/libopencm3/stm32/f1/: nvic.h
libopencm3/include/libopencm3/stm32/f2/: nvic.h
libopencm3/include/libopencm3/stm32/f3/: nvic.h
libopencm3/include/libopencm3/stm32/f4/: nvic.h
libopencm3/include/libopencm3/stm32/f7/: nvic.h
libopencm3/include/libopencm3/stm32/g0/: nvic.h
libopencm3/include/libopencm3/stm32/h7/: nvic.h
libopencm3/include/libopencm3/stm32/l0/: nvic.h
libopencm3/include/libopencm3/stm32/l1/: nvic.h
libopencm3/include/libopencm3/stm32/l4/: nvic.h
libopencm3/include/libopencm3/swm050/: nvic.h
libopencm3/include/libopencm3/vf6xx/: nvic.h
libopencm3/include/libopencmsis/efm32/hg/: irqhandlers.h
libopencm3/include/libopencmsis/efm32/lg/: irqhandlers.h
libopencm3/include/libopencmsis/gd32/f1x0/: irqhandlers.h
libopencm3/include/libopencmsis/msp432/e4/: irqhandlers.h
libopencm3/include/libopencmsis/pac55xx/: irqhandlers.h
libopencm3/include/libopencmsis/sam/4l/: irqhandlers.h
libopencm3/include/libopencmsis/sam/d/: irqhandlers.h
libopencm3/include/libopencmsis/stm32/f0/: irqhandlers.h
libopencm3/include/libopencmsis/stm32/f3/: irqhandlers.h
libopencm3/include/libopencmsis/stm32/f7/: irqhandlers.h
libopencm3/include/libopencmsis/stm32/g0/: irqhandlers.h
libopencm3/include/libopencmsis/stm32/h7/: irqhandlers.h
libopencm3/include/libopencmsis/stm32/l0/: irqhandlers.h
libopencm3/include/libopencmsis/stm32/l4/: irqhandlers.h
libopencm3/include/libopencmsis/swm050/: irqhandlers.h
libopencm3/include/libopencmsis/vf6xx/: irqhandlers.h
src/: FreeRTOSConfig.h  main.c
src/ci/: ci.c  ci.h  datalink.c  datalink.h
src/cmsis-rtos/: cmsis_os.c
src/controller/: controller.c  controller.h
src/platform/: platform.c  platform.h
src/sensor/: sensor.c  sensor.h
src/valve/: valve.c  valve.h
